package DigitalWallet.enums;

public enum TransactionStatus {
    CREATED,
    PENDING,
    SUCCESS,
    FAILED,
}
